spark etl replace fastjson to gson, modify SparkDataCalcExecutor extends SparkEngineConnExecutor